--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "history": "^5.1.0",
     "react": "^17.0.2",
     "react-bootstrap": "^2.0.3",
+    "react-date-picker": "^8.3.6",
     "react-dom": "^17.0.2",
+    "react-icons": "^4.3.1",
     "react-router": "^6.0.2",
     "react-router-dom": "^6.0.2",
     "react-scripts": "4.0.3",
